Still working on clustal msafile input, while overhauling msa file handling to use ESL_BUFFER, while looking ahead to highly compressed MSAs...
esl_mem: a new module, broken away from easel.c. Functions for parsing
"memory lines", read-only non-NUL-terminated char arrays, needed for
working with ESL_BUFFER input. (TODO: esl_regex ought to work on
memory lines too; see www.pcre.org for a possible future replacement.)

(esl_memspn(p, n, " \t\r\n") == n) is idiomatic for "line is all whitespace",
replacing prev functions testing for blank lines.

esl_msafile_clustal_Read(), esl_msafile_clustal_Write() are now
working, in text mode.

esl_msafile_Open() and esl_msafile_Read() now have an accompanying
esl_msafile_OpenFailure() and esl_msafile_ReadFailure(), which deal
with normal opening and parsing errors, printing more diagnostics than
we'd normally put in a one-line code for error handling. Revisit this
in the future, it might be worthwhile to code for sqio as well.

All this new code is coming in as an ESLX_MSAFILE, separate from main
Easel usage. The plan is to gradually encompass all MSA file input
with the new ESLX_MSAFILE, and when it's fully functional, do a quick
changeover to the new system. HMMER, Infernal, miniapps should not be
affected at all while this is going on, however long it takes. In
principle.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@683 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -95,11 +95,14 @@ HDRS = 	easel.h\
 	esl_hmm.h\
 	esl_hyperexp.h\
 	esl_keyhash.h\
+	esl_mem.h\
 	esl_minimizer.h\
 	esl_mixgev.h\
 	esl_mpi.h\
 	esl_msa.h\
 	esl_msacluster.h\
+	esl_msafile.h\
+	esl_msafile_clustal.h\
 	esl_msashuffle.h\
 	esl_msaweight.h\
 	esl_normal.h\
@@ -146,11 +149,14 @@ OBJS =	easel.o\
 	esl_hmm.o\
 	esl_hyperexp.o\
 	esl_keyhash.o\
+	esl_mem.o\
 	esl_minimizer.o\
 	esl_mixgev.o\
 	esl_mpi.o\
 	esl_msa.o\
 	esl_msacluster.o\
+	esl_msafile.o\
+	esl_msafile_clustal.o\
 	esl_msashuffle.o\
 	esl_msaweight.o\
 	esl_normal.o\
@@ -205,6 +211,7 @@ UTESTS =\
 	esl_histogram_utest\
 	esl_hyperexp_utest\
 	esl_keyhash_utest\
+	esl_mem_utest\
 	esl_msa_utest\
 	esl_msacluster_utest\
 	esl_msaweight_utest\
@@ -266,6 +273,7 @@ EXAMPLES = \
         esl_minimizer_example\
         esl_mixgev_example\
         esl_msa_example\
+	esl_msafile_clustal_example\
         esl_msacluster_example\
         esl_msaweight_example\
         esl_normal_example\
