MSA i/o revisions still in progress. Added esl_msafile_afa.[ch] : aligned FASTA format Added esl_msafile_selex.[ch] : SELEX format
Added easel.c::esl_strmapcat(): a string/buffer concatenation function
for text-mode sequences, coordinated with esl_abc_dsqcat() for digital
mode.

esl_msa_Set*() functions now take an additional argument, n, 
for the length of the string or buffer. This allows these 
functions to either take a string or an unterminated buffer
as an argument. NOTE: this affects Infernal and HMMER; I'm
about to check in the necessary changes.

Clustal format writing, digital mode, now constructs an exact mimic of
the ClustalW consensus line. Reverse engineered from ClustalW
code. Noted that MUSCLE has two bugs in its consensus line
construction.

eslx_msafile_Open() now takes a first argument to an alphabet. If
NULL, no digital alphabet: open in text mode. If &abc but abc=NULL,
then it guesses the alphabet, creates an alphabet, and returns it
through the reference. If &abc and abc=a digital alphabet, then it
uses that alphabet. This obviates the need for any special digital
open function; eslx_msafile_OpenDigital() removed.

Added eslx_msafile_GetLine(). A wrapper around esl_buffer_GetLine()
that also increments linenumber and records offset at start of line
in the <ESLX_MSAFILE> structure.

Added esl_memstrcontains(): analog to strstr(), but for an
unterminated buffer.

ESL_REALLOC() added, which doesn't need the tmp void * that
ESL_RALLOC() needs. Travis correctly pointed out that it's unnecessary;
not clear why I had it.

(Philosophical aside: there's a general tidal pull here, as everything
involved in Easel parsing moves from just NUL-terminated strings to
accomodate unterminated buffers too. The newer and presumably more
efficient ESL_BUFFER will generally memory map a file, which means the
input is a non-NUL-terminated string; and it's read-only, so we can't
introduce our own NULs; and it has a design goal of minimizing the
number of buffer copies

--- a/Makefile.in
+++ b/Makefile.in
@@ -102,6 +102,7 @@ HDRS = 	easel.h\
 	esl_msa.h\
 	esl_msacluster.h\
 	esl_msafile.h\
+	esl_msafile_afa.h\
 	esl_msafile_clustal.h\
 	esl_msashuffle.h\
 	esl_msaweight.h\
@@ -156,6 +157,7 @@ OBJS =	easel.o\
 	esl_msa.o\
 	esl_msacluster.o\
 	esl_msafile.o\
+	esl_msafile_afa.o\
 	esl_msafile_clustal.o\
 	esl_msashuffle.o\
 	esl_msaweight.o\
@@ -273,6 +275,7 @@ EXAMPLES = \
         esl_minimizer_example\
         esl_mixgev_example\
         esl_msa_example\
+        esl_msafile_example\
 	esl_msafile_clustal_example\
         esl_msacluster_example\
         esl_msaweight_example\
