--- a/Makefile.in
+++ b/Makefile.in
@@ -102,8 +102,10 @@ HDRS = 	easel.h\
 	esl_msa.h\
 	esl_msacluster.h\
 	esl_msafile.h\
+	esl_msafile_a2m.h\
 	esl_msafile_afa.h\
 	esl_msafile_clustal.h\
+	esl_msafile_psiblast.h\
 	esl_msafile_selex.h\
 	esl_msafile_stockholm.h\
 	esl_msashuffle.h\
@@ -159,8 +161,10 @@ OBJS =	easel.o\
 	esl_msa.o\
 	esl_msacluster.o\
 	esl_msafile.o\
+	esl_msafile_a2m.o\
 	esl_msafile_afa.o\
 	esl_msafile_clustal.o\
+	esl_msafile_psiblast.o\
 	esl_msafile_selex.o\
 	esl_msafile_stockholm.o\
 	esl_msashuffle.o\
@@ -221,6 +225,7 @@ UTESTS =\
 	esl_mem_utest\
 	esl_msa_utest\
 	esl_msacluster_utest\
+	esl_msafile_stockholm_utest\
 	esl_msaweight_utest\
 	esl_random_utest\
 	esl_randomseq_utest\
@@ -282,6 +287,8 @@ EXAMPLES = \
         esl_msa_example\
         esl_msafile_example\
 	esl_msafile_clustal_example\
+	esl_msafile_psiblast_example\
+	esl_msafile_stockholm_example\
         esl_msacluster_example\
         esl_msaweight_example\
         esl_normal_example\
