--- a/Makefile.in
+++ b/Makefile.in
@@ -225,6 +225,11 @@ UTESTS =\
 	esl_mem_utest\
 	esl_msa_utest\
 	esl_msacluster_utest\
+	esl_msafile_a2m_utest\
+	esl_msafile_afa_utest\
+	esl_msafile_clustal_utest\
+	esl_msafile_psiblast_utest\
+	esl_msafile_selex_utest\
 	esl_msafile_stockholm_utest\
 	esl_msaweight_utest\
 	esl_random_utest\
@@ -285,6 +290,7 @@ EXAMPLES = \
         esl_minimizer_example\
         esl_mixgev_example\
         esl_msa_example\
+        esl_msa_example2\
         esl_msafile_example\
 	esl_msafile_clustal_example\
 	esl_msafile_psiblast_example\
