Some cleanup. Committing before switching away from laptop.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@707 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -297,6 +297,7 @@ EXAMPLES = \
         esl_msafile_example\
 	esl_msafile_clustal_example\
 	esl_msafile_phylip_example\
+	esl_msafile_phylip_example2\
 	esl_msafile_psiblast_example\
 	esl_msafile_stockholm_example\
         esl_msacluster_example\
