Stockholm unit tests now test every format error.
Error report fix in several modules: GuessAlphabet() functions need to
use buffer_GetLine(), not msafile_GetLine(), else they'll increment
afp->linenumber and mess up line number reporting.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@708 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -300,6 +300,7 @@ EXAMPLES = \
 	esl_msafile_phylip_example2\
 	esl_msafile_psiblast_example\
 	esl_msafile_stockholm_example\
+	esl_msafile_stockholm_example2\
         esl_msacluster_example\
         esl_msaweight_example\
         esl_normal_example\
