Unit tests reasonably complete for the seven new msafile modules. gcov measures coverage >=94% for all. Two modules (stockholm, phylip) are especially heavily tested, exercising all possible format errors. Could do the same sort of bad format testing for the other five modules, but it's not a high enough priority for now.
Each module has two example drivers, a full featured example (showing
digital and text mode, format and alphabet autodetection, and how to
control it all with cmdline options) and a minimal one (text mode, no
format guessing).

Noted one problem for the future: alphabet guessing only works on
DNA/RNA files if there's absolutely no ambiguity chars other than
N. This is documented, but still.

Next steps: unit testing/examples in esl_msafile itself; .tex
documentation; and restructuring Easel into subdirectories (too many
*.[ch] files for a single src directory now).



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@709 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -295,10 +295,18 @@ EXAMPLES = \
         esl_msa_example\
         esl_msa_example2\
         esl_msafile_example\
+	esl_msafile_a2m_example\
+	esl_msafile_a2m_example2\
+	esl_msafile_afa_example\
+	esl_msafile_afa_example2\
 	esl_msafile_clustal_example\
+	esl_msafile_clustal_example2\
 	esl_msafile_phylip_example\
 	esl_msafile_phylip_example2\
 	esl_msafile_psiblast_example\
+	esl_msafile_psiblast_example2\
+	esl_msafile_selex_example\
+	esl_msafile_selex_example2\
 	esl_msafile_stockholm_example\
 	esl_msafile_stockholm_example2\
         esl_msacluster_example\
