--- a/Makefile.in
+++ b/Makefile.in
@@ -227,6 +227,7 @@ UTESTS =\
 	esl_mem_utest\
 	esl_msa_utest\
 	esl_msacluster_utest\
+	esl_msafile_utest\
 	esl_msafile_a2m_utest\
 	esl_msafile_afa_utest\
 	esl_msafile_clustal_utest\
