Converted Easel to use new esl_msafile modules.
Old esl_msafile* interface goes away. All esl_msafile_*() functions
are gone.  

In general, esl_msafile*() and ESL_MSAFILE from old esl_msa.c are
replaced by esl_msafile*.[ch] modules, eslx_msafile*() calls, and
ESLX_MSAFILE in the new interface; details below. 

Additionally, for a special case of small memory Pfam i/o,
esl_msafile*() and ESL_MSAFILE are replaced by the esl_msafile2.[ch]
module, esl_msafile2*() calls, and ESL_MSAFILE2 object. The
esl_msafile2 module is added by this commit.

This completes Easel's full support for several formats: a2m, afa,
clustal (strict or not), phylip (interleaved and sequential),
psiblast, selex, and stockholm (multiblock or "pfam" one-block). Full
support means input via eslx_msafile_Read(), output via
eslx_msafile_Write(), format autodetection, and alphabet
autodetection.

The new modules use ESL_BUFFER, which confers rewindability and random
access for all input sources (including .gz pipes and stdin streams),
memory-mapping by mmap(), and the ability to open a variety of sources
(files, streams, ESL_BUFFERs, strings, and arbitrary memory).

The esl_msafile2 module, esl_msafile2.[ch], implements a ESL_MSAFILE2
object. This was needed to retain small-memory Pfam i/o functionality,
which is currently not supported by the new msafile modules. The
workaround is to move this functionality to its own module, out of
esl_msa module; identify it as deprecated/legacy; and add small memory
functionality to to-do lists.

This is step one of a two-step conversion. In step one, all functions
in the new interface are named eslx_msafile_*(). Global searches for
esl_msafile_*() will reveal all code that needs to be revised;
moreover, this code will no longer compile. We'll allow some time for
Easel-dependent codes (HMMER, Infernal, others) to adapt. Then in step
two, we'll restore esl_msafile_* names, converting the experimental
eslx_msafile_* interface to esl_msafile_*(). 
 
In more detail:


--- a/Makefile.in
+++ b/Makefile.in
@@ -102,6 +102,7 @@ HDRS = 	easel.h\
 	esl_msa.h\
 	esl_msacluster.h\
 	esl_msafile.h\
+	esl_msafile2.h\
 	esl_msafile_a2m.h\
 	esl_msafile_afa.h\
 	esl_msafile_clustal.h\
@@ -162,6 +163,7 @@ OBJS =	easel.o\
 	esl_msa.o\
 	esl_msacluster.o\
 	esl_msafile.o\
+	esl_msafile2.o\
 	esl_msafile_a2m.o\
 	esl_msafile_afa.o\
 	esl_msafile_clustal.o\
@@ -229,6 +231,7 @@ UTESTS =\
 	esl_msa_utest\
 	esl_msacluster_utest\
 	esl_msafile_utest\
+	esl_msafile2_utest\
 	esl_msafile_a2m_utest\
 	esl_msafile_afa_utest\
 	esl_msafile_clustal_utest\
@@ -294,8 +297,6 @@ EXAMPLES = \
         esl_keyhash_example\
         esl_minimizer_example\
         esl_mixgev_example\
-        esl_msa_example\
-        esl_msa_example2\
         esl_msafile_example\
 	esl_msafile_a2m_example\
 	esl_msafile_a2m_example2\
