Improved alphabet type guessing, following Travis's suggestions.
Travis saw that MIR3.stk was called eslUNKNOWN, not eslDNA, because it
contains a single IUPAC ambig code; and moreover, hmmbuild's resulting
error message was opaque, having nothing to do with the
alphabet-guessing failure.

 The main guessing code is esl_abc_GuessAlphabet (guessing from a
counted composition). Other guessers such as esl_sq_GuessAlphabet(),
esl_msafile_GuessAlphabet() work by collecting counts and calling
esl_abc_GuessAlphabet(). However the documentation of how guessing
works was best on esl_sq_GuessAlphabet(), rather than
esl_abc_GuessAlphabet(), probably a historical oversight. There, there
was a comment to the effect of the DNA/RNA guessing code is
super-conservative and could probably be improved by allowing a small
frequency of ambiguous residues -- which is exactly Travis's
suggestion.

Rule changed from requiring all canonical residues + <N/X>, to
allowing up to 2% noncanonical/non-<N/X> residues, per Travis's
suggestion.

Design criterion is no false positive classifications on known
individual sequences. Tested on nr, Pfam, trembl, nt, Rfam; verified
no fp. See J1/62, SRE:2007/0517-easel-guess-alphabet for testing of
original version; SRE:2012/0201-easel-guess-alphabet for testing of
new frequency-based version.

Improved documentation on esl_abc_GuessAlphabet(), with
crossreferencing to the no-fp testing, using esl_alphabet_example3
driver.

Finally, esl_msafile.c::msafile_OpenBuffer() was errantly not setting
an appropriate error message when guessing failed. Fixed. Now it says
"couldn't guess the alphabet (maybe try --dna/--rna/--amino if
available)".



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@741 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -272,6 +272,7 @@ EXAMPLES = \
         easel_example\
         esl_alphabet_example\
         esl_alphabet_example2\
+	esl_alphabet_example3\
 	esl_buffer_example\
 	esl_buffer_example2\
 	esl_buffer_example3\
