Added esl_msashuffle_PermuteSequenceOrder() in esl_msashuffle.c. Added esl_msashuffle_example driver.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@761 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -315,6 +315,7 @@ EXAMPLES = \
 	esl_msafile_stockholm_example\
 	esl_msafile_stockholm_example2\
         esl_msacluster_example\
+        esl_msashuffle_example\
         esl_msaweight_example\
         esl_normal_example\
         esl_normal_example2\
