Added esl-alipid miniapp: calculates pairwise %id for all seq pairs in msa(s).
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@766 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -48,6 +48,7 @@ PROGS = esl-afetch\
 	esl-alimap\
 	esl-alimask\
 	esl-alimerge\
+	esl-alipid\
 	esl-alistat\
 	esl-cluster\
 	esl-compalign\
@@ -70,6 +71,7 @@ PROGOBJS =\
 	esl-alimap.o\
 	esl-alimask.o\
 	esl-alimerge.o\
+	esl-alipid.o\
 	esl-alistat.o\
 	esl-cluster.o\
 	esl-compalign.o\
