Added esl_stats_GTest(): standard G-test for testing whether two binomial samples come from the same distribution.
esl_stats_example2 runs a G-test with arguments ca, na, cb, nb for
experiments a,b and successes ca out of na trials in exp a, cb/nb in
b.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@771 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -333,6 +333,7 @@ EXAMPLES = \
         esl_ssi_example2\
         esl_stack_example\
         esl_stats_example\
+        esl_stats_example2\
         esl_stopwatch_example\
         esl_stretchexp_example\
         esl_threads_example\
