--- a/configure.ac
+++ b/configure.ac
@@ -440,10 +440,12 @@ AC_SYS_LARGEFILE
 AC_CONFIG_HEADERS([esl_config.h])
 AC_CONFIG_FILES([miniapps/Makefile])
 AC_CONFIG_FILES([testsuite/Makefile])
-AC_CONFIG_FILES([documentation/Makefile])
 AC_CONFIG_FILES([Makefile])
 if test -e "LICENSE.sh.in"; then
   AC_CONFIG_FILES(LICENSE.sh)
+fi
+if test -e "documentation/Makefile.in"; then
+  AC_CONFIG_FILES([documentation/Makefile])
 fi
 
 
