configure.ac now checks if documentation/ exists before trying to make a Makefile in it. It won't exist in a HMMER or Infernal release distro.
This change is related to a similar one in Infernal in r4123.

This is an infernal release branch, but I'll merge this to the trunk
after the release.
------------------------------------------------------------------------



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/branches/infernal@774 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/1.1/configure.ac
+++ b/1.1/configure.ac
@@ -440,10 +440,12 @@ AC_SYS_LARGEFILE
 AC_CONFIG_HEADERS([esl_config.h])
 AC_CONFIG_FILES([miniapps/Makefile])
 AC_CONFIG_FILES([testsuite/Makefile])
-AC_CONFIG_FILES([documentation/Makefile])
 AC_CONFIG_FILES([Makefile])
 if test -e "LICENSE.sh.in"; then
   AC_CONFIG_FILES(LICENSE.sh)
+fi
+if test -e "documentation/Makefile.in"; then
+  AC_CONFIG_FILES([documentation/Makefile])
 fi
 
 
