--- a/configure.ac
+++ b/configure.ac
@@ -275,7 +275,22 @@ ESL_PIC_FLAGS
 # So we need to test that an SSE2 program actually runs without
 # generating an "illegal instruction" error. The program
 # here is sufficient [xref J3/127].
+# Note: some platforms (Ubuntu 32-bit for example) absolutely
+# must have the -msse2 cflag on in order to detect a working
+# emmintrin.h, so we set SIMD_CFLAGS before running the test.
+if test "$enable_sse" = "yes" || test "$enable_sse" = "check"; then
+   if test "x$SIMD_CFLAGS" = x; then
+     case $ax_cv_c_compiler_vendor in
+       gnu)   AX_CHECK_COMPILER_FLAGS(-msse2,[SIMD_CFLAGS="-msse2"],[]);;
+       *)     ;;
+     esac   
+   fi
+fi
 if test "$enable_sse" = "check" && test "$enable_vmx" != "yes"; then
+   sre_save_CFLAGS="$CFLAGS"
+   sre_save_CPPFLAGS="$CPPFLAGS"
+   CFLAGS="$CFLAGS $SIMD_CFLAGS"
+   CPPFLAGS="$CPPFLAGS $SIMD_CFLAGS"
    AC_CHECK_HEADER([emmintrin.h],[
      AC_MSG_CHECKING([if platform can run SSE/SSE2 instructions])
      AC_RUN_IFELSE([AC_LANG_PROGRAM( [[#include <emmintrin.h>]],
@@ -283,17 +298,12 @@ if test "$enable_sse" = "check" && test "$enable_vmx" != "yes"; then
                    [AC_MSG_RESULT([yes])
                      enable_sse=yes],
                    [AC_MSG_RESULT([no])])])
+   CFLAGS="$sre_save_CFLAGS"
+   CPPFLAGS="$sre_save_CPPFLAGS"
 fi
 if test "$enable_sse" = "yes"; then
-   if test "x$SIMD_CFLAGS" = x; then
-     case $ax_cv_c_compiler_vendor in
-       gnu)   AX_CHECK_COMPILER_FLAGS(-msse2,[SIMD_CFLAGS="-msse2"],[]);;
-       *)     ;;
-     esac   
-   fi
    AC_DEFINE(HAVE_SSE2,1,[Support SSE2 (Streaming SIMD Extensions 2) instructions])
 fi
-
 
 
 # VMX/Altivec (not autodetected yet; must use --enable-vmx to enable)
